feat: Enhance PWA caching and accessibility
Adds a `noscript` tag to inform users about JavaScript requirement.
Updates the service worker cache name to `dr-samy-v4` and implements a "network first, then cache" strategy for navigation requests.
Excludes Google API calls and Tailwind CSS CDN requests from caching, while ensuring other assets are served from the cache if offline.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 </script>
 </head>
 <body class="bg-slate-50 dark:bg-slate-950 transition-colors duration-300">
+    <noscript>Vous devez activer JavaScript pour utiliser Dr. Samy.</noscript>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
