feat: Update build and SW configuration
Improve build output structure and cache management.

- Update `vite.config.ts` to define explicit output directories and naming conventions for assets and chunks, aiding cache busting and predictability.
- Update `sw.js` to use a new cache version (`v8`) and to more robustly ignore irrelevant requests, including Chrome extension URLs.
- Update `index.html` to include a comment regarding Vite's path replacement for the script.
- Remove unnecessary empty line from `vercel.json`.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <body class="bg-slate-50 dark:bg-slate-950 transition-colors duration-300">
     <noscript>Vous devez activer JavaScript pour utiliser Dr. Samy.</noscript>
     <div id="root"></div>
+    <!-- Vite remplacera automatiquement ce chemin lors du build -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
