feat: Enhance PWA installation and offline support
Integrates PWA features by adding necessary meta tags, manifest icons, and service worker caching for offline access and installation. Updates the disclaimer UI and removes an unused install popup component.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Dr. Samy - Assistant Médical IA</title>
     
+    <!-- Favicons standard -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png">
+    <link rel="shortcut icon" href="/logo.png">
+
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ff7a21">
